<!-- Veera Gudla N01218714
     Jerin Joy N01276691
     Jacob Stephens N01100888
     Patrick Loboda N01309086 -->


<resources>
    <string name="app_name">Safe Smart Home</string>
    <string name="tab_text_2">Customer Address</string>
    <string name="tab_text_3">Home Status</string>
    <string name="tab_text_5">Humidity/Fire</string>
    <string name="tab_text_6">Customer Review</string>
    <string name="on_back_title">Confirmation</string>
    <string name="on_back_message">Do you want to exit the app?</string>
    <string name="on_back_yes">Yes</string>
    <string name="on_back_no">No</string>
    <string name="ac_on_off">AC Settings</string>
    <string name="heat_on_off">Heat Settings</string>
    <string name="fan_on_off">Fan Settings</string>
    <string name="motion_on_off">Motion Settings</string>
    <string name="splash_title">Safe Smart Home</string>
    <string name="splash_author">Team Safe Smart Home</string>
    <string name="temperature_status">Temperature</string>
    <string name="security_status">Security</string>
    <string name="smoke_status">Smoke</string>
    <string name="humidity_status">Humidity</string>
    <string name="controls_temp_set">Temperature set to: </string>
    <string name="Please_enter_valid_email">Please enter valid Email</string>
    <string name="Please_enter_valid_phone_no">Please enter valid Phone Number</string>
    <string name="Please_enter_comment">Please enter comment</string>
    <string name="cancel">cancel</string>
    <string name="Permission_GRANTED">Permission GRANTED</string>
    <string name="Permission_DENIED">Permission DENIED</string>
    <string name="Permission_needed">Permission needed</string>
    <string name="Permission_this_that">This permission is needed because of this and that</string>
    <string name="controls_degrees_c">°C</string>
    <string name="controls_switch_stage">switch_stage</string>
    <string name="close_activity">Closing Activity</string>
    <string name="are_you_sure">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="street_Address">streetAddress</string>
    <string name="PREFS">PREFS</string>
    <string name="home_control">Home Controls</string>
    <string name="fire_controls">Fire Controls</string>
    <string name="on_off">On/Off</string>
    <string name="smoke_controls">Smoke Controls</string>
    <string name="fire_and_smoke_detection">Fire and Smoke Detection</string>
    <string name="humidity_fire_control">Humidity/Fire Control</string>
    <string name="street_address_hint">Street Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_title">Register</string>
    <string name="email_hint">email</string>
    <string name="Register_btn">Register</string>
    <string name="name_register">name</string>
    <string name="splash_screen_image">splash screen image</string>
    <string name="customer_address">Customer Address</string>
    <string name="street_address">Street Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="insert">Insert</string>
    <string name="intruder">Intruder</string>
    <string name="motion_control">Motion Control</string>
    <string name="heat">Heat</string>
    <string name="smoke_control">Smoke Control</string>
    <string name="temperature_control">Temperature Control</string>
    <string name="exhaust_fan">Exhaust Fan</string>
    <string name="ac">AC</string>
    <string name="humidity_control">Humidity Control</string>
    <string name="fire_control">Fire Control</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="emailaddress">emailaddress</string>
    <string name="secureid">secureID</string>
    <string name="register">Register</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="password_error">Password Error</string>
    <string name="user_created">User Created</string>
    <string name="error">Error</string>
    <string name="thank_you_message_submit">Thank you for submitting.</string>
    <string name="settings">Settings</string>
    <string name="streetAddress">streetAddress</string>
    <string name="provinces">provinces</string>
    <string name="postalcode">postalcode</string>
    <string name="Customer_address_added">Customer Address added</string>
    <string name="fail_to_add_data">Fail to add data</string>
    <string name="username">username</string>
    <string name="customer_review">Customer Review</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">email</string>
    <string name="comment">Comment</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="version_less">Version is less than M</string>
    <string name="version_good">Version is up to date</string>
    <string name="Settings_page">Settings</string>
    <string name="secureID_added_to_FirebaseDB">secureID  added to Firebase DB</string>
    <string name="Enter_9_digit_secID">Please enter 9 digit Secure ID</string>
    <string name="correct_email">Please enter correct gmail address</string>
    <string name="correct_password">Please enter password</string>
    <string name="Password_characters">Password should be at least 8 in length, alphabetic and numeric, 1 special character(except for +,~), at 1 uppercase letter, and at least 1 digit</string>
    <string name="Heat_ON">Heat On</string>
    <string name="NO_Humidity">No Humidity</string>
    <string name="No_smoke_detected">No Smoke Detected</string>
    <string name="No_intruder">No Intruder</string>
    <string name="help">Help</string>
    <string name="About">About</string>
    <string name="Information" translatable="false">The application is an android Safe Smart Home app, that will be used to help
people cohabitate and be safe to prevent any form of threats in a household.
The project also aims to make life easier for those with disabilities, seniors,
children and others. For this project, we will be building an app and hardware
that is easy to use by everyone, and will allow many people to safely
cohabitate; using smart home technologies such as automation, sensors and
other means to prevent injuries and keep the home safe. The similar projects
on the market are all smart home projects. We plan on doing a safe smart
home project which is different from the other projects on the market, because
our emphasis will be the safe element/component of the smart home.</string>
    <string-array name="provinces_fullname">
        <item></item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
        <item>Nunavut</item>
        <item>Northwest Territories</item>
    </string-array>

    <string-array name="provinces">
        <item></item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
        <item>NU</item>
        <item>NT</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_aboutus" translatable="false">AboutusActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>